# wip

anchor-gen/examples/govern-cpi/src/: lib.rs
anchor-gen/examples/marginfi/: Cargo.toml  idl.json
anchor-gen/examples/marginfi/src/: lib.rs
draffle/cli/: Cargo.toml
draffle/programs/community-staking/: Cargo.toml
draffle/programs/dispenser/: Cargo.toml
draffle/programs/draffle/: Cargo.toml
draffle/programs/draffle/src/: lib.rs
frontend/: 1  config-overrides.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  SolanaComponent.js  index.css  theIdl.js
hydra/: Anchor.toml
hydra/program/: Cargo.toml
hydra/program/src/: lib.rs
hydra/program/src/processors/: mod.rs
hydra/program/src/processors/add_member/: nft.rs
hydra/program/src/processors/stake/: set.rs  unstake.rs
hydra/program/src/utils/validation/: mod.rs
hydra/tests/: wallet.test.ts
marginfi-sdk/python/marginpy/: Cargo.toml
marginfi-v2/programs/marginfi/: Cargo.toml
marginfi-v2/programs/marginfi/src/: lib.rs
marginfi-v2/programs/marginfi/src/state/: marginfi_group.rs  price.rs
pyth-sdk-rs/pyth-sdk-solana/: Cargo.toml
pyth-sdk-rs/pyth-sdk-solana/test-contract/: Cargo.toml
solana-oracle-function-example/programs/01_basic_oracle/: Cargo.toml
solana-oracle-function-example/programs/01_basic_oracle/src/: lib.rs
solana-oracle-function-example/programs/02_twap_oracle/: Cargo.toml
solana-oracle-function-example/programs/03_task_runner_oracle/: Cargo.toml
solana-oracle-function-example/switchboard-functions/01_basic_oracle_function_bun/src/: index.ts
solana-superior-randomness/: Anchor.toml  Cargo.toml  Makefile  measurement.txt  package.json
solana-superior-randomness/programs/01_super-simple-randomness/: Cargo.toml
solana-superior-randomness/programs/01_super-simple-randomness/src/: lib.rs
solana-superior-randomness/programs/01_super-simple-randomness/src/instructions/: deposit.rs  mod.rs  request.rs  reveal.rs  seed.rs
solana-superior-randomness/programs/02_usdy_usdc_oracle/: Cargo.toml
solana-superior-randomness/programs/02_usdy_usdc_oracle/src/: lib.rs  models.rs
solana-superior-randomness/programs/02_usdy_usdc_oracle/src/instructions/: deposit.rs
solana-superior-randomness/programs/pyth-sdk-rs/examples/sol-anchor-contract/programs/sol-anchor-contract/: Cargo.toml
solana-superior-randomness/programs/pyth-sdk-rs/pyth-sdk-solana/: Cargo.toml
solana-superior-randomness/programs/pyth-sdk-rs/pyth-sdk-solana/src/: state.rs
solana-superior-randomness/programs/solend-program-library2/: Cargo.toml
solana-superior-randomness/programs/solend-program-library2/token-lending/brick/: Cargo.toml
solana-superior-randomness/programs/solend-program-library2/token-lending/program/: Cargo.toml
solana-superior-randomness/programs/solend-program-library2/token-lending/sdk/: Cargo.toml
solana-superior-randomness/programs/solend-program-library2/token-lending/sdk/src/math/: decimal.rs
solana-superior-randomness/programs/solend-program-library2/token-lending/sdk/src/state/: last_update.rs  rate_limiter.rs  reserve.rs
solana-superior-randomness/programs/usdy_usdc_oracle/: Cargo.toml
solana-superior-randomness/programs/usdy_usdc_oracle/src/: lib.rs  models.rs
solana-superior-randomness/scripts/: init-basic-oracle.ts  watch.ts
solana-superior-randomness/switchboard-functions/02_usdy_usdc_oracle_function_rust/: Cargo.toml  Dockerfile
solana-superior-randomness/switchboard-functions/02_usdy_usdc_oracle_function_rust/src/: etherprices.rs  main.rs
solana-superior-randomness/switchboard-functions/savings_game/: Cargo.toml
solana-superior-randomness/switchboard-functions/savings_game/src/: etherprices.rs  main.rs
solend-program-library/: Cargo.toml
solend-program-library/token-lending/program/: Cargo.toml
solend-program-library/token-lending/program/src/: processor.rs
solend-program-library/token-lending/sdk/: Cargo.toml
solend-program-library/token-lending/sdk/src/: oracles.rs
solend-program-library/token-lending/sdk/src/math/: decimal.rs
solend-program-library/token-lending/sdk/src/state/: obligation.rs  rate_limiter.rs  reserve.rs
svbonkSpider/: .gitignore  example.env  package-lock.json  package.json  readme.md  tsconfig.json
svbonkSpider/src/: buy.ts  idl.json  main.ts
svbonkers/: Cargo.toml
svbonkers/switchboard-functions/: Cargo.toml  Dockerfile
svbonkers/switchboard-functions/src/: etherprices.rs  main.rs
