[package]
name = "dispenser"
version = "0.1.0"
description = "Dispenser program"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "dispenser"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
production = []
default = []

[dependencies]
anchor-lang = "0.28"
anchor-spl = "0.28"
spl-associated-token-account = "*"