[package]
name = "draffle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "draffle"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
production = []
default = []

[dependencies]
anchor-lang = "0.28"
anchor-spl = "0.28"
solana-program = "*"
basic-oracle = { path = "../../../solana-oracle-function-example/programs/01_basic_oracle" , features = ["no-entrypoint"] }
spl-stake-pool = { version = "0.7.0", path = "../../../../solana-program-library/stake-pool/program", features = ["no-entrypoint"] }

[dev-dependencies]
assert_matches = "1.5.0"
bincode = "1.3.3"
solana-sdk = "*"
solana-program-test = "*"
spl-token = { version = "*", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "*", features = ["no-entrypoint"] }
bytemuck = "1.4.0"