cargo-features = ["workspace-inheritance"]

[package]
name = "marginfi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marginfi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = ["test", "debug"]
test = []
client = []
devnet = []
mainnet-beta = []
debug = []

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", tag = "v0.26.0" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", tag = "v0.26.0" }
bytemuck = "1.9.1"
cfg-if = "1.0.0"
enum_dispatch = "0.3.11"
fixed = "1.12.0"
fixed-macro = "1.2.0"
lazy_static = "1.4.0"
pyth-sdk-solana = "*"
solana-program = "*"
static_assertions = "1.1.0"
switchboard-v2 = "*"
type-layout = "0.2.0"

[dev-dependencies]
anyhow = "1.0.66"
assert_matches = "1.5.0"
bincode = "1.3.3"
futures = "0.3.25"
pretty_assertions = "1.2.1"
solana-logger = "*"
solana-program-test = "*"
solana-sdk = "*"
rust_decimal = "*"
fixtures = { path = "../../test-utils", package = "test-utilities" }
