[package]
name = "superior-randomness"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "superior_randomness"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# switchboard-solana = { version = "0.28.30", path = "../../../sbv3/rust/switchboard-solana" }
switchboard-solana = "0.29.73"
solana-program = "*"
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-lang-26 = { git = "https://github.com/coral-xyz/anchor", tag = "v0.26.0", package = "anchor-lang" }
anchor-spl = { version = "0.29.0" }
bytemuck = "*"
arrayref = "*"
spl-stake-pool = { version = "1.0.0", features = ["no-entrypoint"] }
spl-token = "*"
spl-token-2022 = "*"
solend-sdk = { path = "../../../solend-program-library/token-lending/sdk", features = [
] }
pyth-sdk-solana = { path = "../../../pyth-sdk-rs/pyth-sdk-solana", version="0.8.0", features = [
] }
num-derive = "0.4.1"
num-traits = "0.2.17"
spl-pod = "0.1.0"